--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.2"
+  },
+  "dependencies": {
+    "tsc": "^2.0.4"
   }
 }
